--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <li>і теж Настя(12 фото),</li>
   <li>Артем(13 фото)</li>
 </ul>
-        <p class="b"> у них є ще один учасник але він тільки недаво прийшов в команду тому його фотографій немає <strong>Їхні фото)))</strong></p>
+        <p class="b"> у них є ще один учасник але він тільки недаво прийшов в команду тому його фотографій немає 
+            <strong>Їхні фото)))</strong></p>
 <!-- Slideshow container -->
 <div class="slideshow-container">
  <!-- Full-width images with number and caption text -->
@@ -107,7 +108,7 @@
   <div class="mySlides fade" style="display: none;">
     <div class="numbertext">14/ 14</div>
     <img src="img/logo.jpg"  style="width:100%">
-    <div class="text">Фото 14</div>
+    <div class="text">логотип Dream Team House</div>
   </div>
    
   <!-- Next and previous buttons -->
