--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
   <body>
-
-  <h1 class="mainheader">Блогери-тіктокери Dream Team House</h1>
-<p class="b">Я підписана у команду тіктокерів TikTok які зібрались і живуть в одному будинку там є:
+    <div class="container">
+        <img src="komanda-mechty-s-olgoj-buzovoj" style="width:50%;">
+        <div class="content">
+            <h1>Dream Team House</h1>
+            <p>Дата заснування "Dream Team House" 3 березня 2020 рік. 9 березня був створений Ютуб-канал команди. У цьому ж місяці був утворений російський хайп Хаус.
+         Штаб-квартира «Дрім Тім Хаус» знаходиться в місті Москва.Блогери продовжують радувати передплатників новим контентом. У другій половині травня 2020 року в них в гостях побували Діма Масленников, Дава, Ольга Бузова і Андрій Малахов, а на початку літа їх будинок відвідав Діма Білан і Єгор Крід. Даня Мілохін записав спільний трек з Тіматі і Джіганом «Хавчик».Також деякі із них кже опублікували свої власні треки а деякі тільки записали.Ось учасники команди:</p>
+        </div>
+      </div>
 <ul class="ul">
   <li>Діана(2 Фото),</li>
   <li>Даня(3 фото),</li>
